--- a/download.html.in
+++ b/download.html.in
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<title>youtube-dl: Download Page</title>
+<title>nextdl: Download Page</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 
 <table class="heading"><tr>
-	<td class="title"><a href="index.html">youtube-dl</a></td>
+	<td class="title"><a href="index.html">nextdl</a></td>
 	<td class="subtitle">Download Page</td>
 </tr></table>
 
-<p>Remember <em>youtube-dl</em> requires <a href="http://www.python.org/">Python</a> version 2.6, 2.7, or 3.2+ to work except for Windows exe.</p>
+<p>Remember <em>nextdl</em> requires <a href="http://www.python.org/">Python</a> version 2.6, 2.7, or 3.2+ to work except for Windows exe.</p>
 
 <p><a href="@EXE_URL@">Windows exe</a> requires <a href="https://download.microsoft.com/download/1/6/5/165255E7-1014-4D0A-B094-B6A430A6BFFC/vcredist_x86.exe">Microsoft Visual C++ 2010 Service Pack 1 Redistributable Package (x86)</a> and does not require Python that is already embedded into the binary.</p>
 
@@ -26,30 +26,30 @@
 </p>
 
 <p>To install it right away for all UNIX users (Linux, OS X, etc.), type:
-<code class="commands">sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl<br/>
-sudo chmod a+rx /usr/local/bin/youtube-dl</code>
+<code class="commands">sudo curl -L https://nextdl.org/downloads/latest/nextdl -o /usr/local/bin/nextdl<br/>
+sudo chmod a+rx /usr/local/bin/nextdl</code>
 </p>
 
 <p>If you do not have curl, you can alternatively use a recent wget:
 
-<code class="commands">sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl<br/>
-sudo chmod a+rx /usr/local/bin/youtube-dl</code>
+<code class="commands">sudo wget https://nextdl.org/downloads/latest/nextdl -O /usr/local/bin/nextdl<br/>
+sudo chmod a+rx /usr/local/bin/nextdl</code>
 </p>
 
 <p>You can also use pip:
-<code class="commands">sudo pip install --upgrade youtube_dl</code>
+<code class="commands">sudo pip install --upgrade nextdl</code>
 </p>
 <p>
-This command will update youtube-dl if you have already installed it.
-See the <a href="https://pypi.python.org/pypi/youtube_dl">pypi page</a> for more information.
+This command will update nextdl if you have already installed it.
+See the <a href="https://pypi.python.org/pypi/nextdl">pypi page</a> for more information.
 </p>
 
 <p>You can use Homebrew if you have it:
-<code class="commands">brew install youtube-dl</code>
+<code class="commands">brew install nextdl</code>
 </p>
 
 <p>To check the signature, type:
-<code class="commands">sudo wget https://yt-dl.org/downloads/latest/youtube-dl.sig -O youtube-dl.sig<br/>gpg --verify youtube-dl.sig /usr/local/bin/youtube-dl<br/>rm youtube-dl.sig</code>
+<code class="commands">sudo wget https://nextdl.org/downloads/latest/nextdl.sig -O nextdl.sig<br/>gpg --verify nextdl.sig /usr/local/bin/nextdl<br/>rm nextdl.sig</code>
 </p>
 
 <p>The following GPG keys will be used to sign the binaries and the git tags:</p>
@@ -71,7 +71,7 @@ See the <a href="https://pypi.python.org/pypi/youtube_dl">pypi page</a> for more
 <img alt="Creative Commons License" style="border-width:0"
 src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />
 Copyright © 2006-2011 Ricardo Garcia Gonzalez<br />
-Copyright © 2011-2021 youtube-dl developers
+Copyright © 2011-2021 nextdl developers
 </div>
 </body>
 </html>
